Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97448

QDoc: Style warning/note/important/info/tip/hint output

    XMLWordPrintable

Details

    • 5
    • 8687e163757df00c1e64c15ad63680ed5c2f6937 (qt/qttools/dev) dd7a53591e7a5549b0d962487c3ef914e069373c (qt/qttools/6.2) 663d6c11dae3e38a0d7f8b232148e617e7278d2b (qt/tqtc-qttools/5.15)
    • Da Vinci sprint 43

    Description

      QDoc should make sure information that's emphasized as a \note, \important, etc. is styled such that it draws attention from the reader.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            paulwicking Paul Wicking
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: