qdoc: Add styling for \note, \important and \warning

And add Atom types for Warning instead of simply hard-coding a bold
warning note.

Fix a compiler warning for tst_generatedoutput in passing.

Fixes: QTBUG-97448
Change-Id: I1fe691ffaadc549b17c8628817fe761d3be0fad7
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 8687e163757df00c1e64c15ad63680ed5c2f6937)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>